--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,12 @@
-$color-background: #fff;
-$color-text: #000;
+$color-background: rgb(107, 97, 97);
+$color-text: rgb(255, 255, 255);
 $color-theme: #ddd;
 $color-theme-inverted: #000;
 
-$font-family: 'Roboto', sans-serif;
+$font-family: 'Cursive', sans-serif;
 
 $size-radius-small: 8px;
 $size-radius-large: 100%;
 $size-rem: 1.6rem;
 $size-wrapper-margin: 16px;
+
