--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,10 +3,9 @@ $color-text: rgb(255, 255, 255);
 $color-theme: #ddd;
 $color-theme-inverted: #000;
 
-$font-family: 'Cursive', sans-serif;
+$font-family: 'Verdana', sans-serif;
 
 $size-radius-small: 8px;
 $size-radius-large: 100%;
 $size-rem: 1.6rem;
 $size-wrapper-margin: 16px;
-
